--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/jerrylee09/GoogleHomeServer/issues"
   },
   "homepage": "https://github.com/jerrylee09/GoogleHomeServer#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "dependencies": {}
 }
